# rusty-tak

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
converter/: Cargo.toml
converter/src/: cot_proto_translater.rs  lib.rs
converter/src/takproto/: atakmap.commoncommo.protobuf.v1.rs  mod.rs  tests.rs
server/: Cargo.toml
server/src/: main.rs
src/: cot_proto_translater.rs  lib.rs
src/cot_proto_translater/: tests.rs
src/xml/: bullseye.rs  mod.rs
