[package]
name = "converter"
version = "0.1.0"
edition = "2021"

[lib]
name = "converter"
path = "src/lib.rs"

[dependencies]
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
prost = "0.13.5"
quick-xml = { version = "0.36.0", features = ["serialize"] }
serde = { version = "1.0.203", features = ["derive"] }
wasm-bindgen = "0.2"
